He añadido la clase HistorialContenedores para almacenas las listas de contenedores por fecha y la he implementado en las funciones